WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85493
[EFL] Wrong rendering results for square-button-appearance.html
https://bugs.webkit.org/show_bug.cgi?id=85493
Summary
[EFL] Wrong rendering results for square-button-appearance.html
Thiago Marcos P. Santos
Reported
2012-05-03 06:46:01 PDT
Created
attachment 140003
[details]
Current buggy rendering result Button is not square enough, it has rounded corners.
Attachments
Current buggy rendering result
(3.56 KB, image/png)
2012-05-03 06:46 PDT
,
Thiago Marcos P. Santos
no flags
Details
Patch
(3.60 KB, patch)
2012-09-06 21:44 PDT
,
KyungTae Kim
no flags
Details
Formatted Diff
Diff
Patch
(3.49 KB, patch)
2012-09-07 00:19 PDT
,
KyungTae Kim
no flags
Details
Formatted Diff
Diff
Patch
(3.54 KB, patch)
2012-09-09 18:43 PDT
,
KyungTae Kim
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
KyungTae Kim
Comment 1
2012-09-06 21:44:09 PDT
Created
attachment 162667
[details]
Patch
Gyuyoung Kim
Comment 2
2012-09-06 21:59:26 PDT
Comment on
attachment 162667
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=162667&action=review
> Source/WebCore/ChangeLog:14 > + called from RenderThemeEfl::adjustButtonStyle add padding values for a button.
add -> adds or added
> Source/WebCore/ChangeLog:17 > +
Unneeded line.
> Source/WebCore/platform/efl/RenderThemeEfl.cpp:880 > +
I think it is better to add short comment to here.
Gyuyoung Kim
Comment 3
2012-09-06 22:07:33 PDT
KyungTae, could you ask Thiago if you can submit a patch ?
Chris Dumez
Comment 4
2012-09-06 22:40:05 PDT
Comment on
attachment 162667
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=162667&action=review
> Source/WebCore/ChangeLog:16 > + So, the adjustSizeConstraints must not be called for a sqaure-button(SquareButtonPart).
"sqaure" -> "square"
KyungTae Kim
Comment 5
2012-09-07 00:18:51 PDT
I modified the typos. Sorry for the typos. Thiago said it's OK. He assigns this bug to me.
KyungTae Kim
Comment 6
2012-09-07 00:19:16 PDT
Created
attachment 162688
[details]
Patch
Gyuyoung Kim
Comment 7
2012-09-07 00:25:17 PDT
Comment on
attachment 162688
[details]
Patch Looks fine.
Gyuyoung Kim
Comment 8
2012-09-07 02:07:40 PDT
Comment on
attachment 162688
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=162688&action=review
> Source/WebCore/platform/efl/RenderThemeEfl.cpp:-881 > - adjustSizeConstraints(style, Button);
I still think a comment will be help to understand why this code is added.
KyungTae Kim
Comment 9
2012-09-09 18:43:58 PDT
Created
attachment 163023
[details]
Patch
WebKit Review Bot
Comment 10
2012-09-09 20:34:08 PDT
Comment on
attachment 163023
[details]
Patch Clearing flags on attachment: 163023 Committed
r128013
: <
http://trac.webkit.org/changeset/128013
>
WebKit Review Bot
Comment 11
2012-09-09 20:34:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug